css/main.scss
---
---

@charset "UTF-8";
@import url(font-awesome.min.css);
@import url('https://fonts.googleapis.com/css?family=Noto+Sans');

// ** Bootstrap overrides **

// Colors
$brand-primary: #008098;

// Body
$body-bg: #f5f5f5;
$body-color: #1a1a1a;

// Typography
$font-family-base: 'Noto Sans', sans-serif;

// Navbar
$navbar-border-radius: 0;

// Navs
$nav-item-margin: .5rem;

// Jumbotron
$jumbotron-padding: 1.5rem;
$jumbotron-bg: $body-color;

// Finally, import Bootstrap
@import "bootstrap/bootstrap.scss";


// ** Style **

nav {
  background: $brand-primary;
}
nav a {
  color: $body-bg;
}

h2 {
  color: $brand-primary;
}

.center {
  text-align: center;
}

.jumbotron {
  color: $body-bg;
}
.jumbotron #screenshot {
  width: 100%;
  height: auto;
  padding-bottom: 2rem;
}

footer {
  text-align: center;
}

